# request_visualization

./: .gitignore  README.md  install-desktop.sh  pyproject.toml  request-viz.desktop
src/request_visualization/: __init__.py  database.py  main.py  migrate_db.py  models.py
src/request_visualization/resources/: __init__.py
src/request_visualization/widgets/: __init__.py  dialogs.py  main_window.py  request_table.py
